коммит только для сторонней ветки

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-    <!--Шапка-->
+    <!--Шапка бла бла бла-->
     <header class="header">
         <div class="fixed-container">
             <div class="flex-wrap flex-wrap_space-between flex-wrap_aline-centr">
