добавил плавный якорь через элемент html, написав id для соответствующих h2

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         <span class="header-about-me-name__career">Frontend-разработчик и веб-верстальщик</span>
                     </h1>
 
-                    <a href="#" class="button button_orange button_w1024">Узнать больше</a>
+                    <a href="#activity" class="button button_orange button_w1024">Узнать больше</a>
                 </div>
 
                 <picture>
@@ -142,7 +142,7 @@
     <main class="main">
         <section class="main-section">
             <div class="fixed-container">
-                <h2 class="main-section__contetnt-title">Что я делаю</h2>
+                <h2 id="activity" class="main-section__contetnt-title">Что я делаю</h2>
 
                 <ul class="flex-wrap flex-wrap_space-between activity">
                     <li class="activity-item activity-item_layout-landing">
@@ -159,7 +159,7 @@
                     </li>
                 </ul>
 
-                <a href="#" class="button button_orange main-activity-button">Узнать стоимость</a>
+                <a href="#aside" class="button button_orange main-activity-button">Узнать стоимость</a>
             </div>
         </section>
 
@@ -283,7 +283,7 @@
 
         <section class="main-section main-section_aside">
             <div class="fixed-container fixed-container_main-section-aside">
-                <h2 class="main-section__contetnt-title visually-hidden">Дополнительные условия</h2>
+                <h2 id="aside" class="main-section__contetnt-title visually-hidden">Дополнительные условия</h2>
 
                 <p class="aside-text">
                     Адаптивная вёрстка под все устройства и&nbsp;браузеры от&nbsp;1000 рублей всего
