работа над хидером, модальным окном

--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
 
                     <ul class="nav-menu-list">
                         <li class="nav-menu-list__item">
-                            <a href="#">Услуги</a>
+                            <a class="nav-menu-list__link" href="#">Услуги</a>
                         </li>
                         <li class="nav-menu-list__item">
-                            <a href="#">Портфолио</a>
+                            <a class="nav-menu-list__link" href="#">Портфолио</a>
                         </li>
                         <li class="nav-menu-list__item">
-                            <a href="#">Стоимость</a>
+                            <a class="nav-menu-list__link" href="#">Стоимость</a>
                         </li>
                     </ul>
                 </nav>
@@ -85,8 +85,8 @@
                     <!-- для мобильника webp -->
                     <source media="(max-width: 1041px)"
                             type="image/webp"
-                            srcset="https://via.placeholder.com/224x334.webp?text=224x334+webp+1x 1x,
-                        https://via.placeholder.com/448x668.webp?text=448x668+webp+2x 2x">
+                            srcset="img/header/man_224x334.webp 1x,
+                        img/header/man_435x636.webp 2x">
 
                     <!-- для планшета webp -->
                     <source media="(max-width: 1370px)"
