добавил атрибуты для шрифтов

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
 
     <!--Подключение шрифтов-->
-    <link rel="preload" href="fonts/roboto-400.woff2" as="font">
-    <link rel="preload" href="fonts/roboto-700.woff2" as="font">
+    <link rel="preload" href="fonts/roboto-400.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="fonts/roboto-700.woff2" as="font" type="font/woff2" crossorigin>
     <!-- preload - позволяет изменить преоретеность загрузкий файла, такми образом щрифты уже будут загружены до того, как они понадобятся-->
     <!-- as="font" - помогаем браузеру понять, что это за файл-->
     <!-- Слайдер Swiper -->
